// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config reducer Validates configs with unsupported options 1`] = `"The site's gatsby-config.js failed validation"`;

exports[`config reducer handles empty configs 1`] = `
Object {
  "pathPrefix": "",
  "polyfill": true,
}
`;

exports[`config reducer let's you add a config 1`] = `
Object {
  "pathPrefix": "",
  "polyfill": true,
  "siteMetadata": Object {
    "hi": true,
  },
}
`;

exports[`config reducer throws with a suggestion when an invalid key is passed 1`] = `"[1m[31mplugin is not allowed. Did you mean \\"plugins\\"?[39m[22m"`;
